<resources>
    <string name="app_name">HR</string>
    <string name="email">E-mail address</string>
    <string name="your_tcr">ТВОЙ ТЦР</string>
    <string name="hello_register">Привет! Для того, чтобы начать работу укажи свой рабочий email и мы вышлем на него qr-код, который поможет тебе войти :)</string>
    <string name="start_work">Начать работу</string>
    <string name="input_code">Введите код из письма:</string>
    <string name="resend">Отправить заново</string>
    <string name="faq">FAQ</string>
    <string name="employees">Сотрудники</string>
    <string name="orders">Заказы</string>
    <string name="clinics">Клиники по ДМС</string>
    <string name="map">Карта</string>
    <string name="find_place">Найдите место</string>
    <string name="average_price">Средний чек</string>
    <string name="lunch">Бизнес-ланч</string>
    <string name="rating">Рейтинг</string>
    <string name="name">Название</string>
    <string name="input_place">Введите место</string>
    <string name="reviews">Отзывы</string>
    <string name="create_review">Оставить отзыв</string>
    <string name="review">Отзыв</string>
    <string name="price_hint">Сумма</string>
    <string name="pluses">Плюсы:</string>
    <string name="what_did_you_like">Что вам понравилось?</string>
    <string name="minuses">Минусы:</string>
    <string name="what_did_you_dislike">Что вам не понравилось?</string>
    <string name="review_two_dots">Отзыв:</string>
    <string name="review_your_impression">Опишите ваше общее впечатление</string>
    <string name="grade">Оценка:</string>
    <string name="grade_for_this_place">Какую оченку вы хотели бы поставить этому\nзаведению?</string>
    <string name="check">Чек:</string>
    <string name="send">Отправить</string>
    <string name="project">Проект</string>
    <string name="about_me">О себе</string>
    <string name="achieve">Ачивка</string>
    <string name="status">Статус</string>
    <string name="working_in_tinkoff_since">Работает в Тинькофф с</string>
    <string name="birth_date">Дата рождения</string>
    <string name="position_in_company">Позиция в компании</string>
    <string name="table_num">Номер стола</string>
    <string name="delete_photo">Удалить фотографию</string>
    <string name="do_photo">Сделать снимок</string>
    <string name="download_from_device">Загрузить с утройства</string>
    <string name="oops_something_went_wrong">Упс, что-то пошло не так</string>
    <string name="empty">-</string>
    <string name="fill_in_all_the_fields">Заполните все поля</string>
    <string name="wrong_email">Неправильный E-mail!</string>
    <string name="login_link_sent_to_email">Ссылка для входа отправлена на почту</string>
</resources>