<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="230dp"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tv_delete_photo"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/delete_photo"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginHorizontal="12dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete_photo" />

    <TextView
        android:id="@+id/tv_do_photo"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/do_photo"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginHorizontal="12dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_do_photo" />

    <TextView
        android:id="@+id/tv_download_from_device"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/download_from_device"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

</androidx.constraintlayout.widget.ConstraintLayout>