<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="place"
            type="com.tinkoff.hr.data.Place" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_header"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:background="@color/main_yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:layout_width="24dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_bottom_sheet_drag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_place_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="@{place.name}"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_create_review"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_create_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/create_review"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:includeFontPadding="false"
                    app:cornerRadius="20dp"
                    android:letterSpacing="0.03"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/review_background"
                    app:icon="@drawable/ic_create"
                    app:iconTint="@color/main_yellow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/bottom_sheet_text_color"
                android:text="@string/rating"
                app:layout_constraintEnd_toStartOf="@+id/tv_avr_price"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_header" />

            <TextView
                android:id="@+id/tv_avr_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/bottom_sheet_text_color"
                android:text="@string/average_price"
                app:layout_constraintEnd_toEndOf="@+id/layout_header"
                app:layout_constraintStart_toStartOf="@+id/layout_header"
                app:layout_constraintTop_toBottomOf="@+id/layout_header" />

            <TextView
                android:id="@+id/tv_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/bottom_sheet_text_color"
                android:text="@string/lunch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_avr_price"
                app:layout_constraintTop_toBottomOf="@+id/layout_header" />

            <TextView
                android:id="@+id/tv_rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bottom_sheet_text_color"
                android:layout_margin="10dp"
                android:text="@{place.rating}"
                app:layout_constraintEnd_toEndOf="@+id/tv_rating"
                app:layout_constraintStart_toStartOf="@+id/tv_rating"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

            <TextView
                android:id="@+id/tv_avr_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/bottom_sheet_text_color"
                android:text="@{place.averagePrice}"
                app:layout_constraintEnd_toEndOf="@+id/tv_avr_price"
                app:layout_constraintStart_toStartOf="@+id/tv_avr_price"
                app:layout_constraintTop_toBottomOf="@+id/tv_avr_price" />

            <TextView
                android:id="@+id/tv_lunch_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/bottom_sheet_text_color"
                android:text="@{place.lunch}"
                app:layout_constraintEnd_toEndOf="@+id/tv_lunch"
                app:layout_constraintStart_toStartOf="@+id/tv_lunch"
                app:layout_constraintTop_toBottomOf="@+id/tv_lunch" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_address" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/bottom_sheet_text_color"
                android:text="@{place.address}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_avr_price_value" />

            <TextView
                android:id="@+id/tv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:text="@string/reviews"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_reviews" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>